added /token endpoint for easy token retrieval
